# g2-reto2-2020-01-mati-g2

./: Cargo.toml  request.rest
assets/: all_formats.wasm  json.wasm  no_avro.wasm  no_avro_msg-pack.wasm
src/: deserializer.rs  lib.rs  main.rs  matches.rs  typed_tree.rs  user.rs  utils.rs
src/auth/: handler.rs  mod.rs
src/consensus/: mod.rs
src/engine/: engine_keyedheap.rs  mod.rs  offer_ord.rs
src/offers/: handler.rs  mod.rs  model.rs
src/test_utils/: auth_sequence.rs  availability_sequence.rs  mod.rs  requester.rs
