[package]
name = "reto2"
version = "0.1.0"
authors = ["jmanu <jm.castillo12@uniandes.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
bcrypt = "0.6"
sled = "0.31"
bincode = "1.2.1"
crossbeam-channel = "0.4"
raft = "0.6.0-alpha"